--- a/ContentPlatform/ContentPlatform.Presentation/Layout/NavMenu.razor
+++ b/ContentPlatform/ContentPlatform.Presentation/Layout/NavMenu.razor
@@ -13,6 +13,15 @@
             <NavLink class="nav-link" href="" Match="NavLinkMatch.All">
                 <span class="bi bi-house-door-fill-nav-menu" aria-hidden="true"></span> Home
             </NavLink>
+            <NavLink class="nav-link" href="/Driver" Match="NavLinkMatch.All">
+                <span class="bi bi-house-door-fill-nav-menu" aria-hidden="true"></span> Driver
+            </NavLink>
+            <NavLink class="nav-link" href="/Tag" Match="NavLinkMatch.All">
+                <span class="bi bi-house-door-fill-nav-menu" aria-hidden="true"></span> Tag
+            </NavLink>
+            <NavLink class="nav-link" href="/Channel" Match="NavLinkMatch.All">
+                <span class="bi bi-house-door-fill-nav-menu" aria-hidden="true"></span> Channel
+            </NavLink>
         </div>
     </nav>
 </div>
