--- a/ContentPlatform/ContentPlatform.Presentation/Layout/NavMenu.razor
+++ b/ContentPlatform/ContentPlatform.Presentation/Layout/NavMenu.razor
@@ -22,6 +22,9 @@
             <NavLink class="nav-link" href="/Channel" Match="NavLinkMatch.All">
                 <span class="bi bi-house-door-fill-nav-menu" aria-hidden="true"></span> Channel
             </NavLink>
+            <NavLink class="nav-link" href="/Sender" Match="NavLinkMatch.All">
+                <span class="bi bi-house-door-fill-nav-menu" aria-hidden="true"></span> Sender
+            </NavLink>
         </div>
     </nav>
 </div>
